<resources>
    <string name="app_name">Food Zilla</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">"Sign In "</string>
    <string name="preferance_file_name">Login Preferences</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_a_account_register_now">Don\'t have a account Register Now!</string>
    <string name="txt_phone_no">Phone Number</string>
    <string name="Rs">\u20B9</string>
    <string name="show_restaurants">Show Restaurants</string>
    <string name="favourates">Favourates</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close\n</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
</resources>